unpackaged/objects/Document_Parameters__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Document__c</fullName>
        <label>Legal Document</label>
        <referenceTo>Legal_Documents__c</referenceTo>
        <relationshipLabel>Document Parameter</relationshipLabel>
        <relationshipName>Document_Parameter</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Document Parameter</label>
    <nameField>
        <displayFormat>PARM-{0000}</displayFormat>
        <label>Parameter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Parameter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>